Modify cardboard to use a bitmap on the cube face and to change the cube to match the bitmap's aspect ratio

--- a/CardboardSample/build.gradle
+++ b/CardboardSample/build.gradle
@@ -17,11 +17,11 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.0.3'
+    compileSdkVersion 'android-19'
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -36,5 +36,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v4:19.1.0'
 }
